hard-gists/9f1793c4d1f466d3b58966da36b54fad/run.log
=== Docker Run Log for 9f1793c4d1f466d3b58966da36b54fad ===
Started at: Mi 29. Okt 18:42:22 CET 2025

[2025-10-29 18:42:22] START: Running container for 9f1793c4d1f466d3b58966da36b54fad
[2025-10-29 18:42:23] SUCCESS: Container e8c23e4a6371f61186e0b9fa8d0826a0f263a26da3315dd674f9fbbbbd00d19f started for 9f1793c4d1f466d3b58966da36b54fad
=== Container logs for 9f1793c4d1f466d3b58966da36b54fad ===
  File "/snippet.py", line 30
    print 'agent {} mean {} std {}'.format(name, np.mean(R), np.std(R))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9f1793c4d1f466d3b58966da36b54fad ===
[2025-10-29 18:42:25] INFO: Container e8c23e4a6371f61186e0b9fa8d0826a0f263a26da3315dd674f9fbbbbd00d19f has stopped
